# grrs

./: .editorconfig  Cargo.toml  README.md  config_grrs.toml
src/: lib.rs  main.rs
tests/: cli.rs
